tests/out/error/if/branch_no_return.out
tests/out/error/if/branch_no_return.in.bt:2:23 error: branch does not return a value
